# distringo

./: .gitignore  .grcov.yml  Cargo.toml  LICENSE  Procfile  README.md  config.yml.sample  package-lock.json  package.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: test.yml
benches/index/: logical_record_position.rs
client/: api.ts  db.ts  index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/css/: index.css
client/js/: api.js  db.js  entry.js
contrib/: mirror.sh  pl94_171-2010-p1-columns.rb  pl94_171-2010-p2-columns.rb  pl94_171-2010-p3-columns.rb  pl94_171-2010-p4-columns.rb  shp_to_geojson.sh  states
examples/: load.rs
palapelify/: Cargo.toml
palapelify/contrib/: adjacify.rb  stupid.rb
palapelify/src/: main.rs
public/: index.html
public/css/: index.css
public/js/: api.js  distringo.js  index.js
schemas/2010/pl94_171/: h1.yml
schemas/2020/pl94_171/: p3.yml  p4.yml  p5.yml
server/: Cargo.toml
server/src/: main.rs  server.rs
server/src/server/: mod.rs  routes.rs
server/src/server/routes/: api.rs
server/src/server/routes/api/: shapefiles.rs
shpgeo-to-svg/: Cargo.toml
shpgeo-to-svg/src/: main.rs
src/: census2010.rs  census2020.rs  dataset.rs  error.rs  index.rs  lib.rs  main.rs  parser.rs  schema.rs
src/census2010/: pl94_171.rs
src/census2020/: pl94_171.rs
src/dataset/: census2010.rs  header.rs  indexed.rs  packing_list.rs
src/dataset/census2010/: pl94_171.rs
src/dataset/census2010/pl94_171/: header.rs
src/dataset/t/: .gitignore  ak2010.pl.prd.packinglist.txt  ar2010.pl.prd.packinglist.txt  az2010.pl.prd.packinglist.txt  ca2010.pl.prd.packinglist.txt  ct2010.pl.prd.packinglist.txt  de2010.pl.prd.packinglist.txt  fl2010.pl.prd.packinglist.txt  ga2010.pl.prd.packinglist.txt  hi2010.pl.prd.packinglist.txt  ia2010.pl.prd.packinglist.txt  id2010.pl.prd.packinglist.txt  in2010.pl.prd.packinglist.txt  ks2010.pl.prd.packinglist.txt  ma2010.pl.prd.packinglist.txt  md2010.pl.prd.packinglist.txt  mi2010.pl.prd.packinglist.txt  ne2010.pl.prd.packinglist.txt  nm2010.pl.prd.packinglist.txt  oh2010.pl.prd.packinglist.txt  ok2010.pl.prd.packinglist.txt  pa2010.pl.prd.packinglist.txt  pr2010.pl.prd.packinglist.txt  ri2010.pl.prd.packinglist.txt  tx2010.pl.prd.packinglist.txt  ut2010.pl.prd.packinglist.txt  va2010.pl.prd.packinglist.txt  vt2010.pl.prd.packinglist.txt  wa2010.pl.prd.packinglist.txt  wv2010.pl.prd.packinglist.txt
src/dataset/t/2010/: .gitattributes  co2010.pl.prd.packinglist.txt  dc2010.pl.prd.packinglist.txt  il2010.pl.prd.packinglist.txt  ky2010.pl.prd.packinglist.txt  la2010.pl.prd.packinglist.txt  mn2010.pl.prd.packinglist.txt  mo2010.pl.prd.packinglist.txt  ms2010.pl.prd.packinglist.txt  mt2010.pl.prd.packinglist.txt  nc2010.pl.prd.packinglist.txt  nd2010.pl.prd.packinglist.txt  nh2010.pl.prd.packinglist.txt  nj2010.pl.prd.packinglist.txt  nv2010.pl.prd.packinglist.txt  ny2010.pl.prd.packinglist.txt  or2010.pl.prd.packinglist.txt  sc2010.pl.prd.packinglist.txt  sd2010.pl.prd.packinglist.txt  tn2010.pl.prd.packinglist.txt  wi2010.pl.prd.packinglist.txt  wy2010.pl.prd.packinglist.txt
src/index/: logical_record_position.rs
src/parser/: common.rs  fields.rs  packing_list.rs  pl94_171.rs
src/parser/fields/: census2010.rs
src/parser/fields/census2010/: pl94_171.rs
src/parser/fields/census2010/pl94_171/: geographical_header.rs
src/server/: routes.rs
src/server/routes/: api.rs
src/server/routes/api/: shapefiles.rs
tests/: load_2010.rs  load_2020.rs
tests/data/: .gitattributes  .gitignore  in000012010.pl.trim  in000022010.pl.trim  in2010.pl.prd.packinglist.txt.trim  ingeo2010.pl.trim  ri000012018_2020Style.pl.trim  ri000022018_2020Style.pl.trim  ri000032018_2020Style.pl.trim  rigeo2018_2020Style.pl.trim
