[package]
name = "server"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
config = { version = "0.10.1", default_features = false, features = ["json", "yaml"] }
futures = { version = "0.3" }
geo = "0.17.0"
geojson = "0.21.0"
http = "0.2.3"
hyper = "0.14.2"
log = "0.4.14"
once_cell = "1.4.0"
pretty_env_logger = "0.4.0"
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.3", default_features = false }
warp = { version = "0.3.0", features = ["compression"] }
lazy_static = "1.4.0"
serde = { version = "1.0.123", features = ["derive"] }
distringo = { path = ".." }
