[package]
name = "server"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
config = { version = "0.10.1", default_features = false, features = ["json", "yaml"] }
futures = { version = "0.3" }
geo = "0.17.1"
geojson = "0.22.0"
http = "0.2.3"
hyper = "0.14.4"
log = "0.4.14"
once_cell = "1.7.2"
pretty_env_logger = "0.4.0"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.4", default_features = false }
warp = { version = "0.3.0", features = ["compression"] }
lazy_static = "1.4.0"
serde = { version = "1.0.124", features = ["derive"] }
distringo = { path = ".." }
