[package]
name = "server"
publish = false
version = "0.1.0"
authors = ["Kristofer Rye <kristofer.rye@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
config = { version = "0.11.0", default_features = false, features = ["json", "yaml"] }
futures = { version = "0.3" }
geo = "0.18.0"
geojson = "0.22.2"
http = "0.2.4"
hyper = "0.14.7"
log = "0.4.14"
once_cell = "1.7.2"
pretty_env_logger = "0.4.0"
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.6", default_features = false }
warp = { version = "0.3.1", features = ["compression"] }
lazy_static = "1.4.0"
serde = { version = "1.0.124", features = ["derive"] }
distringo = { path = ".." }
